few details updated

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ https://templatemo.com/tm-569-edu-meeting
               <div class="down-content">
                 <h4>Well Qualified Staff</h4>
                 <p>
-                  Institute has well qualified and experienced faculty members. <br/>
+                  Institute has well qualified and experienced faculty members.
                   The faculty members are well trained and experienced in their respective fields.
                 </p>
               </div>
@@ -408,8 +408,9 @@ https://templatemo.com/tm-569-edu-meeting
               </div>
               <div class="down-content">
                 <h4>Student Placements</h4>
+
                 <p>
-                  100% Placement is offered to all the Eligible Students in renowned organizations and also organizes various events to promote Enterpreneurship.
+                  100% Placement is offered to all the Eligible Students in renowned organizations.<br/>(<a href="sub_header/placements.html" style="color:white"> Click for Details</a>)
 
                 </p>
               </div>
