--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ https://templatemo.com/tm-569-edu-meeting
         <div class="col-lg-3 col-sm-3">
           <div class="right-icons">
             <ul>
+              <li><a href="https://www.linkedin.com/company/government-polytechnic-college-bathinda" target="_blank"><i class="fa fa-square-linkedin"></i></a></li>
               <li><a href="http://facebook.com/gpc.bathinda.50" target="_blank"><i class="fa fa-facebook"></i></a></li>
               <li><a href="mailto:gpcbathinda@punjab.gov.in"><i class="fa fa-envelope"></i></a></li>
             </ul>
