--- a/index.html
+++ b/index.html
@@ -226,7 +226,14 @@ https://templatemo.com/tm-569-edu-meeting
                       <!-- <li>
                             <img src="assets/images/news.gif" alt="" class="new-news"><a href="https://ggi.ac.in/hackathon/" target="_blank">NextQuantum 2.0- Hackathon by GGI, Khanna</a>
                           </li> -->
-
+                           <li>
+                            <img src="assets/images/news.gif" alt="" class="new-news"><a href="/assets/files/bids/me_utm.pdf" target="_blank">Bid- ATM Universal Testing Machine<sup>st</sup> Year
+                           </a>
+                         </li>
+                         <li>
+                            <img src="assets/images/news.gif" alt="" class="new-news"><a href="/assets/files/bids/me_computer.pdf" target="_blank">Bid- Desktop Computers<sup>st</sup> Year
+                           </a>
+                         </li>
                         <li>
                             <img src="assets/images/news.gif" alt="" class="new-news"><a href="http://www.punjabteched.net/news/Academic-Calender-2025-26(odd)_July25.pdf" target="_blank">Academic Calendar 2025-26 (Odd Semester)- Except 1<sup>st</sup> Semester/ 1<sup>st</sup> Year
                            </a>
