Bid title modified

--- a/index.html
+++ b/index.html
@@ -227,11 +227,11 @@ https://templatemo.com/tm-569-edu-meeting
                             <img src="assets/images/news.gif" alt="" class="new-news"><a href="https://ggi.ac.in/hackathon/" target="_blank">NextQuantum 2.0- Hackathon by GGI, Khanna</a>
                           </li> -->
                            <li>
-                            <img src="assets/images/news.gif" alt="" class="new-news"><a href="/assets/files/bids/me_utm.pdf" target="_blank">Bid- ATM Universal Testing Machine<sup>st</sup> Year
+                            <img src="assets/images/news.gif" alt="" class="new-news"><a href="/assets/files/bids/me_utm.pdf" target="_blank">Bid- ATM Universal Testing Machine
                            </a>
                          </li>
                          <li>
-                            <img src="assets/images/news.gif" alt="" class="new-news"><a href="/assets/files/bids/me_computer.pdf" target="_blank">Bid- Desktop Computers<sup>st</sup> Year
+                            <img src="assets/images/news.gif" alt="" class="new-news"><a href="/assets/files/bids/me_computer.pdf" target="_blank">Bid- Desktop Computers
                            </a>
                          </li>
                         <li>
