--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="assets/css/gallery.css">
+<link rel="stylesheet" href="assets/css/modal.css">
 <!--
 
 TemplateMo 569 Edu Meeting
@@ -1690,6 +1691,14 @@ https://templatemo.com/tm-569-edu-meeting
 
     </div>
   </section>
+<!-- Modal Overlay -->
+<div id="bannerModal" class="modal-overlay">
+  <div class="modal-content">
+    <span class="close-btn">&times;</span>
+    <a href="https://rangla.punjab.gov.in/" target="_blank" style="text-decoration:none; color:black;"><img src="assets/images/banner-new.jpg" alt="Mission Chardi Kala" style="width:100%; height:auto; border-radius:8px;"></a>
+    <span><button id="proceedBtn" class="btn gradient-btn mt-3">Proceed to Website</button></span>
+  </div>
+</div>
 
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
@@ -1708,6 +1717,8 @@ https://templatemo.com/tm-569-edu-meeting
    <script src="assets/js/event_activities.js"></script>
 
     <script src='assets/js/gallery.js'></script>
+<script src="assets/js/modal.js"></script>
+
 </body>
 
 </body>
