--- a/departments/me/faculty.html
+++ b/departments/me/faculty.html
@@ -204,7 +204,36 @@
                 <div class="down-content">
                     <h4 class="dept-block">Faculty &amp;Non Teaching Members</h4>
                     <div class="faculty-profile">
-
+                         <div class="flip-card">
+                            <div class="flip-card-inner">
+                              <div class="flip-card-front">
+                                <img src="../../assets/images/faculty/harjeev.jpg" alt="Avatar">
+                                <h3>Dr. Harjeev Kumar Khanna</h3>
+                                <h5 style="color:white;">HOD</h5>
+                              </div>
+                              <div class="flip-card-back">
+                                <div class="qualification">
+                                    <h3>
+                                        Qualification
+                                    </h3><br/>
+                                    <h5 style="color:white;">B.Tech.<br/>
+                                    M.Tech.<br/>PhD</h5>
+                                </div>
+                                <div class="specialization-area">
+                                    <h3>
+                                        Specialization Area
+                                    </h3><br/>
+                                    <h5 style="color:white;"></h5>
+                                </div>
+                                <div class="contact">
+                                    <a href="mailto:harjeev.khanna@punjab.gov.in">
+                                        <img src="../../assets/images/email.svg" alt=""
+                                        srcset="">
+                                    </a>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
                           <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
