--- a/departments/me/faculty.html
+++ b/departments/me/faculty.html
@@ -239,7 +239,7 @@
                               <div class="flip-card-front">
                                 <img src="../../assets/images/faculty/munish.jpg" alt="Avatar">
                                 <h3>Dr. Munish Kumar</h3>
-                                <h5 style="color:white;">Lecturer</h5>
+                                <h5 style="color:white;">Sen. Lect.</h5>
                               </div>
                               <div class="flip-card-back">
                                 <div class="qualification">
