--- a/departments/me/home.html
+++ b/departments/me/home.html
@@ -213,8 +213,8 @@
                         <p> Mechanical Engineering is the broadest and most versatile of the engineering professions. The industrial and corporate sector has witnessed an upward swing in the demand of professionals and technocrats due to rapid industrialization. As a consequence, mechanical engineering has become a most sought after profession. The mission of the mechanical engineering department is to produce professionals who possess the acumen, competence and skills needed to enter, succeed and lead in the profession. The department strives hard to provide a nurturing environment that stimulates faculty and students to collaborate in solving practical problems, motivates learning and helps them reach the pinnacle of their potentials. The department has highly qualified faculty dedicated to impart the latest knowledge using well-equipped labs, latest infrastructure, seminars, workshops and expert lectures. The department has an excellent placement record as well since its inception.
                         </p>
                        <div>
-                        <img style="width:200px;" src="../../assets/images/faculty/munish.jpg" alt="photo" srcset="">
-                        <figcaption>Dr. Munish Kumar<br/> O/I M.E.</figcaption>
+                        <img style="width:200px;" src="../../assets/images/faculty/harjeev.jpg" alt="photo" srcset="">
+                        <figcaption>Dr. Harjeev Kumar Khanna<br/> HOD M.E.</figcaption>
                        </div>
                       </div>
 
