--- a/index.html
+++ b/index.html
@@ -103,92 +103,96 @@ https://templatemo.com/tm-569-edu-meeting
       <div class="container">
           <div class="row">
             <div class="col-12">
-              <nav class="main-nav">
-                <a href="index.html">
-                  <img src="assets/images/logo.jpeg" class="logo" alt="">
-                </a>
-                <ul class="nav">
-                  <li><a href="index.html" >Home</a></li>
-                  <li class="has-sub">
-                    <a href="javascript:void(0)">About Us</a>
-                    <ul class="sub-menu">
-                      <li><a href="aboutus/organization.html">Organization</a></li>
-                      <li><a href="aboutus/principal_message.html">Principal&apos;s Message</a></li>
-                      <li><a href="aboutus/vision_mission.html">Vision & Mission</a></li>
-                      <li><a href="aboutus/history.html">History</a></li>
-                      <li><a href="aboutus/campus.html">Campus</a></li>
-                    </ul>
-                  </li>
-                  <li class="has-sub">
-                    <a href="javascript:void(0)">Academics & Admission</a>
-                    <ul style="width:280px" class="sub-menu">
-                      <li><a href="academics_admissions/programmes.html">Programmes of Study</a></li>
-                      <li><a href="#scholarships_offered">Scholarships</a></li>
-                      <li><a href="academics_admissions/admission_eligibility.html">Admission Eligibility</a></li>
-                      <li><a href="academics_admissions/antiragging.html">Anti Ragging</a></li>
-                      <li><a href="academics_admissions/fee_structure.html">Fee Structure</a></li>
-                      <li><a href="academics_admissions/academic_calendar.html">Academic Calendar</a></li>
-                      <li><a href="academics_admissions/general_rules.html">General Rules and Guidelines</a></li>
-                      <li><a href="academics_admissions/psbte_results.html">PSBTE Results</a></li>
-                      <li><a href="academics_admissions/psbte_merit.html">PSBTE Merit Positions</a></li>
-                    </ul>
-                  </li>
-                  <li class="has-sub">
-                    <a href="javascript:void(0)">Departments</a>
-                    <ul style="width:420px" class="sub-menu">
-                      <li><a href="departments/aa/home.html">Architectural Assistantship</a></li>
-                      <li><a href="departments/ce/home.html">Civil Engineering</a></li>
-                      <li><a href="departments/cse/home.html">Computer Science &amp; Engineering</a></li>
-                      <li><a href="departments/ee/home.html">Electrical Engineering</a></li>
-                      <li><a href="departments/ece/home.html">Electronics & Communications Engg</a></li>
-                      <li><a href="departments/it/home.html">Information Technology</a></li>
-                      <li><a href="departments/me/home.html">Mechanical Engineering</a></li>
-                      <li><a href="departments/pie/home.html">Mechanical Engineering (Production)</a></li>
-                      <li><a href="departments/pharmacy/home.html">Pharmacy</a></li>
-                      <li><a href="departments/applied/home.html">Applied Sciences</a></li>
-                      <li><a href="departments/workshop/home.html">Workshop</a></li>
-                      <li><a href="departments/office/home.html">Office Staff</a></li>
-                    </ul>
-                  </li>
-                  <li class="has-sub">
-                    <a href="javascript:void(0)">Facilities</a>
-                    <ul class="sub-menu">
-                      <li><a href="facilities/src_clubs/home.html">SRC Clubs</a></li>
-                      <li><a href="facilities/library.html">Library</a></li>
-
-                      <li><a href="facilities/sports_nss/home.html">Sports &amp; NSS</a></li>
-                      <li><a href="facilities/canteen.html">Canteen</a></li>
-                      <li><a href="departments/workshop/home.html">Workshops</a></li>
-                      <li><a href="facilities/alumni/home.html">Alumni</a></li>
-
-                      </ul>
-                      </li>
-
-                  <li class="has-sub">
-                    <a href="javascript:void(0)">Affiliations</a>
-                    <ul class="sub-menu">
-                      <li><a href="affiliations/aicte/home.html">AICTE</a></li>
-                      <li><a href="affiliations/pci/home.html">PCI</a></li>
-                      <li><a href="affiliations/coa/home.html">COA</a></li>
-                      </ul>
-                      </li>
-                      <li class="has-sub">
-                        <a href="javascript:void(0)">Important Links</a>
-                        <ul  style="width:350px" class="sub-menu">
-                          <li><a href="http://www.pgrkam.com/" target="_blank">Punjab Ghar Ghar Rozgar</a></li>
-                          <li><a href="https://scholarships.gov.in/" target="_blank">National Scholarship Portal</a></li>
-                          <li><a href="https://scholarships.punjab.gov.in/" target="_blank">Scholarship Portal (Govt. of Punjab)</a></li>
-                          <li><a href="https://connect.punjab.gov.in/">Punjab Grievance Redressal Portal</a></li>
-                          <li><a href="help_desk/icc.html">Internal Complaint Committee</a></li>
-                          <!--<li><a href="help_desk/aicte_feedback.html">AICTE Feedback Facility</a></li>-->
-                          <li><a href="help_desk/scst.html">Anti-discrimination cell</a></li>
+                <nav class="main-nav">
+                    <a href="index.html">
+                    <img src="assets/images/logo.jpeg" class="logo" alt="">
+                    </a>
+                    <ul class="nav">
+                    <li><a href="index.html" >Home</a></li>
+                    <li class="has-sub">
+                        <a href="javascript:void(0)">About Us</a>
+                        <ul class="sub-menu">
+                        <li><a href="aboutus/organization.html">Organization</a></li>
+                        <li><a href="aboutus/principal_message.html">Principal&apos;s Message</a></li>
+                        <li><a href="aboutus/vision_mission.html">Vision & Mission</a></li>
+                        <li><a href="aboutus/history.html">History</a></li>
+                        <li><a href="aboutus/campus.html">Campus</a></li>
                         </ul>
-                          </li>
-                          </ul>
-                          <a class="menu-trigger">
-                            <span>Menu</span>
-                          </a>
-                        </nav>
+                    </li>
+                    <li class="has-sub">
+                        <a href="javascript:void(0)">Academics</a>
+                        <ul style="width:280px" class="sub-menu">
+                        <li><a href="academics_admissions/programmes.html">Programmes of Study</a></li>
+                        <li><a href="#scholarships_offered">Scholarships</a></li>
+                        <li><a href="academics_admissions/admission_eligibility.html">Admission Eligibility</a></li>
+                        <li><a href="academics_admissions/antiragging.html">Anti Ragging</a></li>
+                        <li><a href="academics_admissions/fee_structure.html">Fee Structure</a></li>
+                        <li><a href="academics_admissions/academic_calendar.html">Academic Calendar</a></li>
+                        <li><a href="academics_admissions/general_rules.html">General Rules and Guidelines</a></li>
+                        <li><a href="academics_admissions/psbte_results.html">PSBTE Results</a></li>
+                        <li><a href="academics_admissions/psbte_merit.html">PSBTE Merit Positions</a></li>
+                        </ul>
+                    </li>
+                    <li class="has-sub">
+                        <a href="javascript:void(0)">Departments</a>
+                        <ul style="width:420px" class="sub-menu">
+                        <li><a href="departments/aa/home.html">Architectural Assistantship</a></li>
+                        <li><a href="departments/ce/home.html">Civil Engineering</a></li>
+                        <li><a href="departments/cse/home.html">Computer Science &amp; Engineering</a></li>
+                        <li><a href="departments/ee/home.html">Electrical Engineering</a></li>
+                        <li><a href="departments/ece/home.html">Electronics & Communications Engg</a></li>
+                        <li><a href="departments/it/home.html">Information Technology</a></li>
+                        <li><a href="departments/me/home.html">Mechanical Engineering</a></li>
+                        <li><a href="departments/pie/home.html">Mechanical Engineering (Production)</a></li>
+                        <li><a href="departments/pharmacy/home.html">Pharmacy</a></li>
+                        <li><a href="departments/applied/home.html">Applied Sciences</a></li>
+                        <li><a href="departments/workshop/home.html">Workshop</a></li>
+                        <li><a href="departments/office/home.html">Office Staff</a></li>
+                        </ul>
+                    </li>
+                    <li class="has-sub">
+                        <a href="javascript:void(0)">Facilities</a>
+                        <ul class="sub-menu">
+                        <li><a href="facilities/src_clubs/home.html">SRC Clubs</a></li>
+                        <li><a href="facilities/library.html">Library</a></li>
+
+                        <li><a href="facilities/sports_nss/home.html">Sports &amp; NSS</a></li>
+                        <li><a href="facilities/canteen.html">Canteen</a></li>
+                        <li><a href="departments/workshop/home.html">Workshops</a></li>
+                        <li><a href="facilities/alumni/home.html">Alumni</a></li>
+
+                        </ul>
+                        </li>
+
+                    <li class="has-sub">
+                        <a href="javascript:void(0)">Affiliations</a>
+                        <ul class="sub-menu">
+                        <li><a href="affiliations/aicte/home.html">AICTE</a></li>
+                        <li><a href="affiliations/pci/home.html">PCI</a></li>
+                        <li><a href="affiliations/coa/home.html">COA</a></li>
+                        </ul>
+                        </li>
+                        <li class="has-sub">
+                            <a href="javascript:void(0)">Important Links</a>
+                            <ul  style="width:350px" class="sub-menu">
+                            <li><a href="http://www.pgrkam.com/" target="_blank">Punjab Ghar Ghar Rozgar</a></li>
+                            <li><a href="https://scholarships.gov.in/" target="_blank">National Scholarship Portal</a></li>
+                            <li><a href="https://scholarships.punjab.gov.in/" target="_blank">Scholarship Portal (Govt. of Punjab)</a></li>
+                            <li><a href="https://connect.punjab.gov.in/">Punjab Grievance Redressal Portal</a></li>
+                            <li><a href="help_desk/icc.html">Internal Complaint Committee</a></li>
+                            <!--<li><a href="help_desk/aicte_feedback.html">AICTE Feedback Facility</a></li>-->
+                            <li><a href="help_desk/scst.html">Anti-discrimination cell</a></li>
+                            </ul>
+                            </li>
+                            </ul>
+                            <a href="index.html">
+                                <img src="assets/images/logo_30_years.png" class="right-logo" alt="">
+                            </a>
+
+                            <a class="menu-trigger">
+                                <span>Menu</span>
+                            </a>
+                            </nav>
           </div>
           </div>
       </div>
