--- a/index.html
+++ b/index.html
@@ -57,9 +57,29 @@ https://templatemo.com/tm-569-edu-meeting
   }
 }
 </style>
+    <script type="text/javascript">
+  function googleTranslateElementInit() {
+    new google.translate.TranslateElement(
+      {
+        pageLanguage: 'en',
+        includedLanguages: 'pa,en',
+        layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+        autoDisplay: false
+      },
+      'google_translate_element'
+    );
+  }
+</script>
+
+<script
+  type="text/javascript"
+  src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+</script>
+
   </head>
 
 <body>
+<div id="google_translate_element"></div>
 
   <!-- Sub Header -->
   <div class="sub-header">
